--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,8 @@ html {
   font-size: 62.5%;
   box-sizing: border-box;
 
+  overflow-x: hidden;
+
   @media only screen and (max-width: 1200px) {
     font-size: 50%;
   }
@@ -45,5 +47,4 @@ body {
   width: 100%;
   background: $color-primary;
   background: $linear-gradient-2;
-  background-size: cover;
 }
